# ipascribe

./: .gitattributes  .gitignore  LICENSE  README.md  cmudict.json  lambda.py  parse.py
cmudict/: cmudict.pickle  parse.py
ipascribe-app/: package.json
ipascribe-app/public/: index.html
ipascribe-app/src/: App.css  App.tsx  AudioPlayer.tsx  NextButton.tsx  SkipButton.tsx  usePolly.ts  useWordFetch.ts
ipascribe-app/src/ipainput/: IpaInput.tsx  LICENSE  charsets.ts  glyphs.ts
ipascribe-queryserver/: Cargo.toml
ipascribe-queryserver/src/: cmudict.rs  main.rs
