[package]
name = "ipascribe-queryserver"
version = "0.1.0"
authors = ["Ronny Chan <ronny6993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"

# Statics
lazy_static = "1.4"
lazy-static-include = "2.2"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.7.3"
